# cg-3d-engine

./: .gitattributes  .gitignore  README.md  makefile
FASE1/: CMakeLists.txt
FASE1/leitor/: leitor.hpp
FASE1/src/: CMakeLists.txt
FASE1/src/engine/: Haasengine.cpp  RBengine.cpp  engine.cpp  leitor.cpp  leitor.hpp
FASE1/src/generator/: generator.cpp
FASE1/src/utils/: figura.cpp  figura.hpp  ponto.cpp  ponto.hpp
FASE1/test_fase1/: test_1_1.xml  test_1_2.xml  test_1_3.xml  test_1_4.xml  test_1_5.xml
FASE2/src/: CMakeLists.txt
FASE2/src/engine/: engine.cpp  leitor.cpp  leitor.hpp
FASE2/src/generator/: generator.cpp
FASE2/src/utils/: figura.cpp  figura.hpp  groups.cpp  ponto.cpp  ponto.hpp
FASE2/test_files_2/: test_2_1.xml  test_2_2.xml  test_2_4.xml
FASE2/tests_custom/: solar_side.xml  solar_system.xml
FASE3/extras/: catmullGen.py
FASE3/patches/: comet.patch
FASE3/src/: CMakeLists.txt
FASE3/src/engine/: engine.cpp  leitor.cpp  leitor.hpp
FASE3/src/generator/: generator.cpp
FASE3/src/utils/: catmull.cpp  catmull.hpp  figura.cpp  figura.hpp  groups.cpp  groups.hpp  ponto.cpp  ponto.hpp
FASE3/test_files_2/: test_2_3.xml
FASE3/tests_custom/: comet.xml  solar_dynamic.xml  solar_side.xml  solar_system.xml
FASE4/extras/: cometGen.py
FASE4/src/: CMakeLists.txt
FASE4/src/engine/: engine.cpp  leitor.cpp  leitor.hpp
FASE4/src/generator/: generator.cpp
FASE4/src/utils/: bezier.cpp  bezier.hpp  catmull.cpp  catmull.hpp  colors.cpp  colors.hpp  figura.cpp  figura.hpp  groups.hpp  lights.cpp  lights.hpp  normals.cpp  normals.hpp  ponto.cpp  ponto.hpp
FASE4/test_fase1/: test_1_1.xml  test_1_2.xml  test_1_4.xml  test_1_5.xml
FASE4/test_files_3/: test_3_1.xml  test_3_2.xml
FASE4/test_files_4/: test_4_1.xml  test_4_2.xml  test_4_3.xml  test_4_4.xml  test_4_5.xml  test_4_6.xml
FASE4/tests_custom/: comet.xml  solar_dynamic.xml
src/generator/: generator.cpp
src/tinyxml/: tinyxml2.cpp
src/utils/: figura.cpp  figura.hpp  ponto.cpp  ponto.hpp
